# ML-Interface

./: .gitignore  .ycm_extra_conf.py  Bitcoin_train.csv  Ethereum_test.csv  IPG.csv  IPG_test.csv  IPG_train.csv  LEO_test.csv  Readme.md  app.py  as.py  change.py  check.py  hello.py  main.py  pyproject.toml  temp.py
.vim/.ropeproject/: objectdb
Comdata/: Ağustos_Test.xlsx  Ağustos_Train.xlsx  Temmuz_Test.xlsx
Comdata/1/: model.h5  model.json
Data/: Bitcoin.csv  Bitcoin_test.csv  Ethereum.csv  Ethereum_train.csv  LEO.csv  LEO_train.csv
Real Data/: Forecast_Bidirectional LSTM.docx  Forecast_CNN.docx  Forecast_MLP.docx  Forecast_Table_GSM_backup.docx  doc.py  train.csv
Real Data/OLD/: Forecast_LSTM.docx  Load.docx  (+2 more)
app/: asd  data.py  m2.py  main.py  pyproject.toml  requirements.py  requirements.txt  structure.txt
app/Comdata/: Temmuz_Train.xlsx
app/Comdata/All Data/: OrekData_20200818.xlsx
app/Table Templates/: SVM.docx
app/asd/: model.h5  model.json
app/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
app/catboost_info/learn/: events.out.tfevents
app/gui/: backend.py  catboost_arch.py  elm.py  feature_selection.py  featureselection.py  generalregression.py  helpers.py  hybrid.py  lgbm.py  linear_regression.py  mlp.py  montecarlo.py  movingaverage.py  random_forest.py  random_walk.py  ridge.py  sarima.py  supportvectormachine.py  test.py  timeseries.py  xg.py
app/gui/backend/: __init__.py  data.py  handlers.py  lookback.py  metrics.py  scaler.py  utils.py
app/gui/components/: __init__.py  customize_train_set_component.py  input_list_component.py  model_component.py  model_validation_component.py  test_model_component.py  utils.py
app/v2/: helpers.py  random_forest.py
app/v2/components/: __init__.py  test.py
data/: test.csv
mlinterface/: main.py  structure.txt
src/: main.py
(+392 files in other folders)
