[tool.poetry]
name = "ml-interface"
version = "0.1.0"
description = ""
authors = ["HHYurdagul <hhyurdagul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.13"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
openpyxl = "^3.1.4"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.11.0"
python-lsp-ruff = "^2.2.1"
pylsp-mypy = "^0.6.8"
pylsp-rope = "^0.1.16"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
