[tool.basedpyright]
typeCheckingMode = "standard"

[tool.poetry]
name = "ml-interface"
version = "0.1.0"
description = ""
authors = ["HHYurdagul <hhyurdagul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.13"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
openpyxl = "^3.1.4"

[tool.poetry.group.dev.dependencies]
basedpyright = "^1.13.2"
ruff = "^0.5.0"
ruff-lsp = "^0.0.54"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
