[tool.poetry]
name = "ml-interface"
version = "0.1.0"
description = ""
authors = ["Bytewaiser <bytewaiser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.16.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
statsmodels = "^0.14.2"
openpyxl = "^3.1.3"
joblib = "^1.4.2"
pandastable = "^0.13.1"
catboost = "^1.2.5"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.11.0"
python-lsp-ruff = "^2.2.1"
pylsp-mypy = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
